V8ScriptValueDeserializer: Handle WebRTC being disabled.

This resolves an issue whereby unit tests would crash if the WebRTC
implementation was not available.

Bug: 795627
Change-Id: I03352725217d6d5be34247a1aae2663157ae4292
Reviewed-on: https://chromium-review.googlesource.com/844031
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526206}
Former-commit-id: a957db365602f08fc7a71cf0f954915a7dc60c57